Fix CSS + Add swagger + Ajout des chiffres clés et du dernier graphique + Ajout du bouton dans le menu quand on est admin
